# jscpd-rs

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.js
.github/workflows/: build.yml  release.yml  test.yml
.husky/: pre-commit
examples/javascript/: error_typescript.ts  file_1.js  slice.js
npm/jscpdrs-cli/: README.md  package-lock.json  package.json  tsconfig.json
npm/jscpdrs-cli/lib/: index.js  install.js  run.js  uninstall.js
npm/jscpdrs-cli/src/: index.ts  install.ts  run.ts  typing.d.ts  uninstall.ts
scripts/: bench.sh  build.sh
src/: detect.rs  main.rs  parse.rs  tokenmap.rs
